--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                             <li><a href="#welcome">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#ourclients">Our Clients</a></li>
-                            <li><a href="#contact-us"
-                                    onclick="window.scrollTo(0,document.body.scrollHeight);">Contact</a></li>
+                            <li><a href="#contact" id="contactus">Contact</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -324,7 +323,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="copyright">Copyright &copy; 2022 Java Media</p>
+                    <p class="copyright" id="contact">Copyright &copy; 2022 Java Media</p>
                 </div>
             </div>
         </div>
