--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         content="Java Media adalah perusahaan yang bergerak dalam pengadaan barang dan jasa bidang Teknologi Informasi, dengan memberikan prioritas pada layanan penyediaan...">
     <meta name="author" content="Java Media">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
+    <link rel="icon" href="favicon.ico">
 
     <title>Java Media</title>
     <!-- Additional CSS Files -->
